# credit_scoring_onchain

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  gradio_demo.py  main.py  pyproject.toml  requirements.txt  start_services.sh  start_services_windows.bat
.github/workflows/: aws-deploy.yml  ci-cd.yml  ci.yml  deploy.yml  docker-build.yml  python-app.yml
app/api/routes/: api.py  web.py
app/core/: config.py
app/schemas/: score.py
app/services/: scoring_engine.py
app/static/css/: etherscan.css  etherscan_backup.css
app/static/js/: main.js
app/templates/: home.html  report.html  score_detail.html
aws/terraform/: deploy_from_outputs.ps1  terraform_outputs.json  variables.tf
infra/: README.md  main.tf  outputs.tf
notebook/: test_get_unique_label_list_etherscan.ipynb
prompts/: wallet_report.prompty
services/: credit_scoring_service.py  etherscan_service.py  offchain_data_generator.py
tests/: test_credit_scoring_service.py
